# troll

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  protos  troll.sln  troll.vcxproj  troll.vcxproj.filters
action/: CMakeLists.txt  action-manager.cc  action-manager.h  evaluator.cc  evaluator.h  executor.cc  executor.h  query-manager.cc  query-manager.h
animation/: CMakeLists.txt  animator-manager.cc  animator-manager.h  animator-manager_test.cc  animator.cc  animator.h  animator_test.cc  executor.cc  executor.h  performer.cc  performer.h  performer_test.cc  script-animator.cc  script-animator.h  script-animator_test.cc
core/: CMakeLists.txt  action-manager.cc  action-manager.h  action.h  bitmap.h  collision-checker.cc  collision-checker.h  collision-checker_test.cc  core.h  event-dispatcher.cc  event-dispatcher.h  event-dispatcher_test.cc  event.h  events.cc  events.h  execution-context.cc  execution-context.h  executor.cc  executor.h  geometry.cc  geometry.h  geometry_test.cc  main.cc  mock-scene-manager.h  primitives.h  property-owner.h  renderer.h  resource-manager.cc  resource-manager.h  scene-manager.cc  scene-manager.h  scene-manager_test.cc  scene-node-pattern.cc  scene-node-pattern.h  scene-node-query.cc  scene-node-query.h  scene.cc  scene.h  scripting-engine.h  texture.h  (+7 more)
dart_troll/: CMakeLists.txt  dart_troll.cc  dart_utils.cc  dart_utils.h  main.dart  pubspec.yaml
dart_troll/lib/: dart_troll.dart  intro.dart
dart_troll/lib/src/core/: audio.dart  input_handler.dart  scene.dart  sprite.dart  util.dart
dart_troll/lib/src/dk/: height.dart  intro.dart  level1.dart  sprites.dart
data/scenes/: level1.scene  main.keys  main.scene  main.sfx
data/scripts/: actions.py  dk.py  sprites.py  troll_element.py
data/scripts/pytroll/: actions.py  events.py  sprite.py
data/sprites/: barrel.sprite  barrel_stack.sprite  blue_barrel.sprite  dk-sprite.asciipb  dk.animation  dk.sprite  flame.sprite  hammer.sprite  heart.sprite  help.sprite  ladder.sprite  mario-sprite.asciipb  mario.animation  mario.sprite  mario_life.sprite  oil.sprite  platform.sprite  princess.sprite
input/: CMakeLists.txt  input-event.h  input-manager.cc  input-manager.h
main/: main.vcxproj  main.vcxproj.filters
proto/: CMakeLists.txt  action-service.proto  action.proto  animation.proto  audio.proto  collision.proto  event.proto  input-event.proto  key-binding.proto  primitives.proto  protos  query.proto  scene-node.proto  scene.proto  sprite.proto
pytroll/: CMakeLists.txt  actions.py  audio.py  events.py  input.py  python-engine.cc  python-engine.h  scene.py  sprite.py
samples/dart_dk/: pubspec.yaml
samples/dart_dk/lib/: height.dart  intro.dart  level1.dart  sprites.dart
samples/dart_dk/lib/scenes/: height.dart  intro.dart  level1.dart
samples/dart_dk/lib/sprites/: donkey_kong.dart  environment.dart  mario.dart  princess.dart
samples/dart_dk/lib/src/: gravity_sprite.dart
samples/dart_dk/lib/src/sprites/: donkey_kong.dart  environment.dart  gravity_sprite.dart  mario.dart
samples/donkey_kong/: CMakeLists.txt  donkey_kong.vcxproj  main.cc
samples/donkey_kong/data/scenes/: height.scene  main.keys  main.scene
samples/donkey_kong/data/scripts/: dk.py
samples/donkey_kong/data/scripts/dk/: controls.py  height.py  intro.py  level1.py  scenes.py  sprites.py
samples/donkey_kong/data/sprites/: blue_barrel.sprite  dk.animation  dk.sprite  heart.sprite  mario.animation  mario.sprite  mario_life.sprite  platform.sprite  princess.sprite
scripting/: CMakeLists.txt  script-manager.cc  script-manager.h
sdl/: CMakeLists.txt  input-backend.cc  input-backend.h  renderer.cc  renderer.h  texture.cc  texture.h
sound/: CMakeLists.txt  audio-mixer.cc  audio-mixer.h  sound-loader.cc  sound-loader.h  sound-manager.cc  sound-manager.h  sound.h
troll-test/: test-core.h  test-util.h  testing-resource-manager.h  troll-test.vcxproj  troll-test.vcxproj.filters
